--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="have_a_drone">Have a Drone</string>
     <string name="need_a_drone">Need a drone</string>
     <string name="welcome_to_mdrone">welcome to MDrone</string>
+    <string name="login">Login</string>
+    <string name="new_account">New Account</string>
+    <string name="password">Password</string>
+    <string name="username">Username</string>
+    <string name="customer">Customer</string>
+    <string name="drone_pilot">Drone Pilot</string>
 </resources>
